# CppCarEngine

./: CMakeLists.txt  README.md  main.cpp
include/: config.hpp  connecting_rod.hpp  connecting_rod_renderer.hpp  crankshaft.h  crankshaft.hpp  crankshaft_renderer.hpp  piston.hpp  piston_renderer.hpp  utils.hpp  window_manager.hpp
src/: connecting_rod.cpp  connecting_rod_renderer.cpp  crankshaft.cpp  crankshaft_renderer.cpp  piston.cpp  piston_renderer.cpp  utils.cpp  window_manager.cpp
